--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -770,6 +770,16 @@
                                     __MSG_groupTab_temporaryAggressive_label__
                                     __MSG_config_groupTabTemporaryState_option_checked_after__</option>
                 </select></label></p>
+      <p><label>__MSG_config_groupTabTemporaryStateForAPI_label__
+                <select id="groupTabTemporaryStateForAPI">
+                  <option value="0">__MSG_config_groupTabTemporaryState_option_default__</option>
+                  <option value="1">__MSG_config_groupTabTemporaryState_option_checked_before__
+                                    __MSG_groupTab_temporary_label__
+                                    __MSG_config_groupTabTemporaryState_option_checked_after__</option>
+                  <option value="2">__MSG_config_groupTabTemporaryState_option_checked_before__
+                                    __MSG_groupTab_temporaryAggressive_label__
+                                    __MSG_config_groupTabTemporaryState_option_checked_after__</option>
+                </select></label></p>
     </fieldset>
 
     </div>
