Add ability to deactivate auto-grouping of bookmarks from dropped tabs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -1296,6 +1296,12 @@
               __MSG_config_insertDroppedTabsAt_end__</label></li>
       </ul>
     </fieldset>
+    </div>
+    <p><label class="has-checkbox"
+             ><input id="autoCreateFolderForBookmarksFromTree"
+                     type="checkbox">
+              __MSG_config_autoCreateFolderForBookmarksFromTree_label__</label></p>
+    <div class="expert">
     <p><label class="has-checkbox"
              ><input id="autoExpandOnLongHover"
                      type="checkbox">
