Use class to detect UI elements

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -349,17 +349,17 @@
       <p><label for="defaultBookmarkParentChooser">__MSG_config_defaultBookmarkParentId_label__</label>
          <span class="parentIdChooserMiniContainer">
            <select id="defaultBookmarkParentId"
-                   name="parentId"></select>
-           <button name="showAllFolders"
+                   class="parentIdChooserMini"></select>
+           <button class="showAllFolders"
                    title="__MSG_bookmarkDialog_showAllFolders_tooltip__"></button>
          </span></p>
-      <div name="parentIdChooserFullContainer">
+      <div class="parentIdChooserFullContainer">
         <div class="parentIdChooserFullTreeContainer"
              tabindex="0"
              data-no-accept-by-enter="true">
-          <ul name="parentIdChooserFull"></ul>
+          <ul class="parentIdChooserFull"></ul>
         </div>
-        <span><button name="newFolder"
+        <span><button class="newFolder"
                       accesskey="__MSG_bookmarkDialog_newFolder_accessKey__"
                       data-no-accept-by-enter="true">__MSG_bookmarkDialog_newFolder__</button></span>
       </div>
