Implement simulated tab preview panel (#3671)
* Prepare frame contents to render tab preview tooltip #3412

* Add comments to describe the design of the module

* Implement events to track mouseenter/leave on tab substances

* Send show/hide preview message to the active tab #3412

* Send message to show tab preview with preview URL

* Show tab preview

* Remove needless parameter

* Simulate behavior of the native tab preview panel #3412

* Fix indent

* Apply appearance same to the native tab preview panel as possible as we can #3412

* Cleanup old subframes #3412

* Don't try to capture discarded tabs #3412

* Cleanup cached tab object to avoid mismatched relation

* Make more safe for invalid tab case

* Show tab preview panel with fixed width

* Use internal name same to Firefox's one

* Suppress error about sending message to special tabs

* Clear preview when active tab is switched

* Re-prepare frame to show tab preview tooltip automatically

* Hide tab preview panel when the sidebar is closed

* Cleanup needless iframe

* Hide tab preview tooltip when the tab is detached

* Destroy and reconstruct frame more safely

* Show tab preview panel with expected scale in zoomed tabs

* Apply platform specific appearance correctly

* Don't apply opacity animation while updating

* Position tab preview in better coordinates even if the sidebar header is shown.

* Fix mispositioning in zoomed contents

* Ignore delayed messages

* Suppress regular tooltip when in-content tab previw tooltip is not available

* Calculate offset more correctly

* Show tab preview panel near the sidebar

* Deactivate tab preview tooltip by default

* Show tab preview tooltip in the sidebar if the tab contents is privileged

* Calculate size and position of the tab preview tooltip more correctly

* Don't try to embed tab preview tooltip in other addon's contents

* Show tab preview tooltip as soon as possible

* Fall

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -115,7 +115,14 @@
                           size="5"
                           min="0"
                           max="100">
-                   __MSG_config_maxPinnedTabsRowsAreaPercentage_label_after__</label></p>
+                   __MSG_config_maxPinnedTabsRowsAreaPercentage_label_after__</label></p>[
+    </div>
+    <p><label class="has-checkbox"
+             ><input id="allUrlsPermissionGranted_tabPreviewTooltip"
+                     type="checkbox"
+                     data-related-config-key="tabPreviewTooltip">
+             __MSG_config_tabPreviewTooltip_label__</label></p>
+    <div class="expert">
     <p><label class="has-checkbox"
              ><input id="showCollapsedDescendantsByTooltip"
                      type="checkbox">
@@ -593,7 +600,8 @@
               <span class="preview-image"></span></label></p>
     <p><label class="sub has-checkbox"
              ><input id="clipboardReadPermissionGranted_middleClickPasteURLOnNewTabButton"
-                     type="checkbox">
+                     type="checkbox"
+                     data-related-config-key="middleClickPasteURLOnNewTabButton">
              __MSG_config_middleClickPasteURLOnNewTabButton_label__</label></p>
     <p><label>__MSG_config_autoAttachOnNewTabButtonAccelClick_before__
               <select id="autoAttachOnNewTabButtonAccelClick">
@@ -839,7 +847,8 @@
 
     <p><label class="has-checkbox"
              ><input id="allUrlsPermissionGranted_ctrlTabTracking"
-                     type="checkbox">
+                     type="checkbox"
+                     data-related-config-key="skipCollapsedTabsForTabSwitchingShortcuts">
               __MSG_config_requestPermissions_allUrls_ctrlTabTracking__</label></p>
     <div id="ctrlTabSubItemsContainer" class="expert">
       <p class="sub"><label class="has-checkbox"
