--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -174,6 +174,7 @@
         </tab-item-substance>
       </tab-item>
     </ul>
+    <iframe id="tab-preview-tooltip-frame"></iframe>
     <div id="blocking-screen">
       <span class="throbber"></span>
       <progress max="100" value="0"></progress>
