--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -115,7 +115,7 @@
                           size="5"
                           min="0"
                           max="100">
-                   __MSG_config_maxPinnedTabsRowsAreaPercentage_label_after__</label></p>[
+                   __MSG_config_maxPinnedTabsRowsAreaPercentage_label_after__</label></p>
     </div>
     <p><label class="has-checkbox"
              ><input id="allUrlsPermissionGranted_tabPreviewTooltip"
