Add checkbox to activate debug log around tab preview tooltip

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -1615,6 +1615,7 @@
           <p><label class="has-checkbox"><input id="logFor-sidebar/size" type="checkbox">sidebar/size</label></p>
           <p><label class="has-checkbox"><input id="logFor-sidebar/subpanel" type="checkbox">sidebar/subpanel</label></p>
           <p><label class="has-checkbox"><input id="logFor-sidebar/tab-context-menu" type="checkbox">sidebar/tab-context-menu</label></p>
+          <p><label class="has-checkbox"><input id="logFor-sidebar/tab-preview-tooltip" type="checkbox">sidebar/tab-preview-tooltip</label></p>
           <p><label class="has-checkbox"><input id="logFor-sidebar/tst-api-frontend" type="checkbox">sidebar/tst-api-frontend</label></p>
       </fieldset>
     </fieldset>
