Add a new option to deactivate in-sidebar tab preview

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -123,6 +123,11 @@
                      data-related-config-key="tabPreviewTooltip">
              __MSG_config_tabPreviewTooltip_label__</label></p>
     <div class="expert">
+    <p class="sub"
+      ><label class="has-checkbox"
+             ><input id="tabPreviewTooltipInSidebar"
+                     type="checkbox">
+             __MSG_config_tabPreviewTooltipInSidebar_label__</label></p>
     <p><label class="has-checkbox"
              ><input id="showCollapsedDescendantsByTooltip"
                      type="checkbox">
