Render tab preview panel in sidbear without iframe for compatibility with non-default theme

--- a/webextensions/resources/tab-preview-frame.html
+++ b/webextensions/resources/tab-preview-frame.html
@@ -7,5 +7,5 @@
 This is a sub part to show tab preview tooltip.
 See also: /siedbar/tab-preview-tooltip.js
 -->
-<script type="module" src="./tab-preview-frame.js"></script>
+<script type="module" src="./module/tab-preview-frame.js"></script>
 <title></title>
