Add a new expert option to open dropped links in background tabs with discarded state #3682

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -1310,6 +1310,11 @@
                ><input id="simulateTabsLoadInBackgroundInverted"
                        type="checkbox">
                 __MSG_config_simulateTabsLoadInBackgroundInverted_label__</label></p>
+      <p class="sub"
+        ><label class="has-checkbox"
+               ><input id="tabsLoadInBackgroundDiscarded"
+                       type="checkbox">
+                __MSG_config_tabsLoadInBackgroundDiscarded_label__</label></p>
     </fieldset>
     <fieldset>
       <legend>__MSG_config_insertDroppedTabsAt_caption__</legend>
