--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -29,7 +29,8 @@
     display: flex;
     flex-direction: column;
     left: 0;
-    padding: 1em 0 0;
+    padding-block: 1em 0;
+    padding-inline: 0;
     position: fixed;
     right: 0;
     top: 0;
@@ -39,7 +40,8 @@
     display: flex;
     flex-direction: row;
     line-height: 1.25;
-    margin: 0;
+    margin-block: 0;
+    margin-inline: 0;
   }
 
   h1::before {
@@ -47,7 +49,7 @@
     content: "";
     display: inline-block;
     height: 1.25em;
-    margin-right: 0.25em;
+    margin-inline-end: 0.25em;
     mask: url("./icons/folder.svg") no-repeat center / 100%;
     width: 1.25em;
   }
@@ -61,24 +63,29 @@
   }
 
   header p {
-    margin: 0.5em 0 1em;
+    margin-block: 0.5em 1em;
+    margin-inline: 0;
   }
 
   header {
     border-bottom: 1px solid;
-    margin: 0 1em 1em;
+    margin-block: 0 1em;
+    margin-inline: 1em;
   }
 
   #tabs {
     display: flex;
     flex-grow: 1;
     overflow-x: auto;
-    padding: 0 1em 0 0;
+    padding-block: 0;
+    padding-inline: 0 1em;
   }
 
   #tabs ul {
-    margin: 0 0 0 20px;
-    padding: 0;
+    margin-block: 0;
+    margin-inline: 20px 0;
+    padding-block: 0;
+    padding-inline: 0;
   }
 
   #tabs li {
@@ -86,8 +93,10 @@
     flex-direction: row;
     flex-grow: 1;
     list-style: none;
-    margin: 0 0 0 0.15em;
-    padding: 0;
+    margin-block: 0;
+    margin-inline: 0.15em 0;
+    padding-block: 0;
+    padding-inline: 0;
     white-space: pre;
   }
 
@@ -168,7 +177,8 @@
     flex-direction: row;
     flex-grow: 1;
     text-decoration: none;
-    padding: 0.25em 0;
+    padding-block: 0.25em;
+    padding-inline: 0;
   }
 
   #tabs a:hover,
@@ -181,7 +191,7 @@
     content: ' ';
     display: inline-bock;
     height: var(--favicon-size);
-    margin-right: 0.25em;
+    margin-inline-end: 0.25em;
     width: calc(var(--favicon-size) / 5);
   }
 
@@ -189,8 +199,10 @@
   #tabs span.link span.label {
     display: inline-block;
     vertical-align: calc(var(--favicon-size) - 1em);
-    margin: 0;
-    padding: 0 0 0 0.25em;
+    margin-block: 0;
+    margin-inline: 0;
+    padding-block: 0;
+    padding-inline: 0.25em 0;
     white-space: pre-wrap;
   }
 
@@ -215,7 +227,8 @@
     max-height: var(--throbber-size);
     max-width: var(--throbber-size);
     overflow: hidden;
-    padding: 0;
+    padding-block: 0;
+    padding-inline: 0;
     pointer-events: none;
     position: relative;
     width: var(--throbber-size);
@@ -246,9 +259,11 @@
     color: #efefef;
     display: none;
     line-height: 1;
-    margin: 1em 0 0 1em;
+    margin-block: 1em 0;
+    margin-inline: 1em 0;
     opacity: 0.75;
-    padding: 0.5em;
+    padding-block: 0.5em;
+    padding-inline: 0.5em;
     position: fixed;
     right: 0.5em;
     top: 0.5em;
