--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -17,7 +17,8 @@
   body {
     background: var(--bg-color);
     color: var(--text-color);
-    padding: 2em 12%;
+    padding-block: 2em;
+    padding-inline: 12%;
     font: message-box;
   }
 
@@ -43,9 +44,10 @@
 
   .permissions {
     text-align: left;
-    margin-left: 8%;
-    margin-right: 8%;
-    padding: 0;
+    margin-inline-start: 8%;
+    margin-inline-end: 8%;
+    padding-block: 0;
+    padding-inline: 0;
   }
   ul.permissions,
   ul.permissions > li {
@@ -53,7 +55,7 @@
   }
   label.has-checkbox:not(.inline),
   label.has-radio:not(.inline) {
-    margin-left: 2em;
+    margin-inline-start: 2em;
     text-indent: -2em;
     display: block;
   }
@@ -94,12 +96,14 @@
     transform: rotate(90deg);
   }
   .user-chrome-css p {
-    margin: 1em 0 0 1em;
+    margin-block: 1em 0;
+    margin-inline: 1em 0;
     color: #efefef;
     background: #0c0c0d;
     border: 1px solid;
     border-radius: 0.5em;
-    padding: 0.5em;
+    padding-block: 0.5em;
+    padding-inline: 0.5em;
     box-shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.35);
     min-width: 2em
   }
