--- a/webextensions/tests/runner.html
+++ b/webextensions/tests/runner.html
@@ -33,15 +33,19 @@
 
 
       ul#logs {
-        margin: 1em 0 0;
-        padding: 0;
+        margin-block: 1em 0;
+        margin-inline: 0;
+        padding-block: 0;
+        padding-inline: 0;
       }
 
       ul#logs li {
         border-top: 1px solid;
         list-style: none;
-        margin: 0;
-        padding: 1em;
+        margin-block: 0;
+        margin-inline: 0;
+        padding-block: 1em;
+        padding-inline: 1em;
       }
 
       ul#logs li.failure .description {
@@ -61,7 +65,8 @@
 
       .diff {
         background: white;
-        padding: 0.5em;
+        padding-block: 0.5em;
+        padding-inline: 0.5em;
       }
 
       .diff .line {
