Use logical border properties #3689

--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -68,7 +68,7 @@
   }
 
   header {
-    border-bottom: 1px solid;
+    border-block-end: 1px solid;
     margin-block: 0 1em;
     margin-inline: 1em;
   }
