--- a/webextensions/tests/runner.html
+++ b/webextensions/tests/runner.html
@@ -40,7 +40,7 @@
       }
 
       ul#logs li {
-        border-top: 1px solid;
+        border-block-start: 1px solid;
         list-style: none;
         margin-block: 0;
         margin-inline: 0;
