--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -15,6 +15,10 @@
     opacity: 0;
   }
 
+  :root.rtl {
+    direction: rtl;
+  }
+
   :root {
     background: var(--bg-color);
     color: var(--text-color);
