--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -14,6 +14,10 @@
     opacity: 0;
   }
 
+  :root.rtl {
+    direction: rtl;
+  }
+
   body {
     background: var(--bg-color);
     color: var(--text-color);
