--- a/webextensions/resources/group-tab.html
+++ b/webextensions/resources/group-tab.html
@@ -32,11 +32,11 @@
     bottom: 0;
     display: flex;
     flex-direction: column;
-    left: 0;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
     padding-block: 1em 0;
     padding-inline: 0;
     position: fixed;
-    right: 0;
     top: 0;
   }
 
@@ -152,15 +152,10 @@
     box-shadow: 0 0 0.1em rgba(255, 255, 255, 0.3);
     content: " ";
     display: inline-block;
+    inset-inline-end: 0;
     opacity: 0;
     position: absolute;
     top: 0;
-  }
-  :root:not(.rtl) .closebox::before {
-    right: 0;
-  }
-  :root.rtl .closebox::before {
-    left: 0;
   }
 
   .closebox:hover::before {
@@ -171,15 +166,10 @@
     background: var(--text-color);
     content: " ";
     display: inline-block;
+    inset-inline-end: 0;
     mask: url("/sidebar/styles/icons/close-16.svg") no-repeat center / 100%;
     position: absolute;
     top: 0;
-  }
-  :root:not(.rtl) .closebox::after {
-    right: 0;
-  }
-  :root.rtl .closebox::after {
-    left: 0;
   }
 
   #tabs a,
@@ -238,6 +228,7 @@
     display: inline-block;
     font-size: var(--throbber-size);
     height: var(--throbber-size);
+    inset-inline-start: calc(50% - var(--throbber-size));
     max-height: var(--throbber-size);
     max-width: var(--throbber-size);
     overflow: hidden;
@@ -250,12 +241,6 @@
     position: absolute;
     top: calc(50% - var(--throbber-size));
     transform: scale(2, 2);
-  }
-  :root.updating:not(.has-contents):not(.rtl) .throbber {
-    left: calc(50% - var(--throbber-size));
-  }
-  :root.updating:not(.has-contents).rtl .throbber {
-    right: calc(50% - var(--throbber-size));
   }
 
   :root.updating:not(.has-contents) .throbber::before {
@@ -282,6 +267,7 @@
     box-shadow: 0.2em 0.2em 0.5em rgba(0, 0, 0, 0.35);
     color: #efefef;
     display: none;
+    inset-inline-end: 0.5em;
     line-height: 1;
     margin-block: 1em 0;
     margin-inline: 1em 0;
@@ -292,12 +278,6 @@
     top: 0.5em;
     transition: opacity 150ms ease-out;
     z-idnex: 1000;
-  }
-  :root:not(.rtl) #optionsHint {
-    right: 0.5em;
-  }
-  :root.rtl #optionsHint {
-    left: 0.5em;
   }
   #optionHint:hover {
     opacity: 1;
