--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -74,14 +74,9 @@
     position: fixed;
     top: 0;
     font-size: 95%;
+    inset-inline-start: 0;
     text-align: start;
     transition: opacity 0.3s ease;
-  }
-  :root:not(.rtl) .user-chrome-css {
-    left: 0;
-  }
-  :root.rtl .user-chrome-css {
-    right: 0;
   }
   .user-chrome-css:not(:hover) {
     opacity: 0.65;
@@ -95,24 +90,14 @@
     line-height: 1;
   }
   .user-chrome-css .arrow.top-tabbar {
+    inset-inline-start: 2em;
     top: 0;
     transform: rotate(180deg);
   }
-  :root:not(.rtl) .user-chrome-css .arrow.top-tabbar {
-    left: 2em;
-  }
-  :root.rtl .user-chrome-css .arrow.top-tabbar {
-    right: 2em;
-  }
   .user-chrome-css .arrow.sidebar-header {
+    inset-inline-start: 0;
     top: 1.8em;
     transform: rotate(90deg);
-  }
-  :root:not(.rtl) .user-chrome-css .arrow.sidebar-header {
-    left: 0;
-  }
-  :root.rtl .user-chrome-css .arrow.sidebar-header {
-    right: 0;
   }
   .user-chrome-css p {
     margin-block: 1em 0;
