--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -48,8 +48,7 @@
 
   .permissions {
     text-align: start;
-    margin-inline-start: 8%;
-    margin-inline-end: 8%;
+    margin-inline: 8%;
     padding-block: 0;
     padding-inline: 0;
   }
