Introduce an expert option to shift tab preview panel on privacy mode ex. privacy.resistFingerprinting=true #3698

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -128,6 +128,12 @@
              ><input id="tabPreviewTooltipInSidebar"
                      type="checkbox">
              __MSG_config_tabPreviewTooltipInSidebar_label__</label></p>
+    <p class="sub"
+      ><label>__MSG_config_tabPreviewTooltipOffsetTop_label_before__
+              <input id="tabPreviewTooltipOffsetTop"
+                     type="number"
+                     size="5">
+              __MSG_config_tabPreviewTooltipOffsetTop_label_after__</label></p>
     <p><label class="has-checkbox"
              ><input id="showCollapsedDescendantsByTooltip"
                      type="checkbox">
